Reduce the number of epoch before early stopping

--- a/exercise-2_cnns.ipynb
+++ b/exercise-2_cnns.ipynb
@@ -802,7 +802,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='red'>Compile and train it</font>"
+    "<font color='red'>Compile and train it. Make sure to use early stopping to prevent overfitting!</font>"
    ]
   },
   {
@@ -857,7 +857,7 @@
     "<font color='white'>\n",
     "model.compile('rmsprop', 'categorical_crossentropy')\n",
     "model.fit(x_train, y_train, batch_size=64, epochs=512, validation_split=0.1,\n",
-    "          callbacks=[keras.callbacks.EarlyStopping(patience=8, restore_best_weights=True)])\n",
+    "          callbacks=[keras.callbacks.EarlyStopping(patience=4, restore_best_weights=True)])\n",
     "</font>"
    ]
   },
